2015-07-31  Jacob Fenton  <bocajnotnef@gmail.com>

   * scripts/normalize-by-median.py,khmer/khmer_logger.py: added logging
   framework, prototyped in normalize-by-median

2015-07-31  Kevin Murray  <spam@kdmurray.id.au>

   * lib/Makefile,Makefile,lib/*.pc.in,lib/test-compile.cc: Misc debian-based
   compatiblity changes
   * lib/get_version.py: Add crunchbang, chmod +x

2015-07-29  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * khmer/_khmer.cc: add more CPyChecker inspired fixes
   * lib/*.{cc,hh}: clean up includes and forward declarations

2015-07-29  Luiz Irber  <khmer@luizirber.org>

   * Makefile: Adapt Makefile rules for py3 changes.
   * jenkins-build.sh: Read PYTHON_EXECUTABLE and TEST_ATTR from environment.

2015-07-29  Amanda Charbonneau  <charbo24@msu.edu>

   * scripts/fastq-to-fasta.py: Changed '-n' default description to match
   behaviour

2015-07-29  Luiz Irber  <khmer@luizirber.org>

   * tests/test_{scripts,streaming_io}.py: Fix the build + add a test

2015-07-28  Titus Brown  <titus@idyll.org>

   * tests/test_streaming_io.py: new shell cmd tests for streaming/piping.
   * tests/khmer_tst_utils.py: refactor/replace runtestredirect(...) with
   scriptpath(...) and run_shell_cmd(...).
   * scripts/test_scripts.py: remove test_interleave_reads_broken_fq_4 for
   only one input file for interleave-reads.py; replace runscriptredirect call
   with run_shell_cmd.
   * scripts/interleave-reads.py: force exactly two input files.
   * scripts/split-paired-reads.py: fix print statement; clarify output.
   * scripts/{normalize-by-median.py,sample-reads-randomly.py,
   trim-low-abund.py}: if stdin is supplied for input, check that -o
   specifies output file.
   * scripts/filter-abund.py: if stdin is supplied for input, check that -o
   specifies output file; switched -o to use argparse.FileType.
   * scripts/extract-long-sequences.py: switched -o to use argparse.FileType.
   * scripts/{abundance-dist,count-median}.py: added '-' handling for output.