@@ -2,6 +2,7 @@
 
    * scripts/normalize-by-median.py,khmer/khmer_logger.py: added logging
    framework, prototyped in normalize-by-median
+   * khmer/khmer_args.py: Made info function respect being quiet
 
 2015-07-31  Kevin Murray  <spam@kdmurray.id.au>
 
